Fix body padding on small devices so there's no weird gap at the top of the page

--- a/less/evething.less
+++ b/less/evething.less
@@ -1,6 +1,11 @@
 body {
     padding-top: 50px;
 }
+@media (max-width: 767px) {
+  body {
+    padding-top: 0px;
+  }
+}
 
 .pos { color: #009800; }
 .neg { color: #FF0000; }
